packages/parser/test/parser/E0168.txt
fn test (a: int, b: str)
===== err =====
anonymous:1:25: ParseError: E0168 - Expected function definition
1 | fn test (a: int, b: str)
  |                         ^
